[package]
name = "tendermock"
version = "0.1.0"
authors = ["CharlyCst <castes.ch@gmail.com>"]
edition = "2018"

[[bin]]
name = "tendermock"
path = "src/main.rs"

[dependencies]
jsonrpc-core = "15.0"
jsonrpc-http-server = "15.0"
jsonrpc-derive = "15.0"
prost-types = "0.6.1"
prost = "0.6.1"
serde = "1.0.116"
ics23 = "0.6.0"
sha2 = "0.9.2"
hex = "0.4.2"

ibc = { git = "https://github.com/informalsystems/ibc-rs" }
ibc-proto = { git = "https://github.com/informalsystems/ibc-rs" }

# TODO: import this properly
tendermint = "0.17.0-rc2"
tendermint-testgen = "0.17.0-rc2"
tendermint-rpc = "0.17.0-rc2"
tendermint-proto = "0.17.0-rc2"
tendermint-light-client = "0.17.0-rc2"

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = [ "suggestions", "derive", "std" ]
