[package]
name = "tendermock"
version = "0.1.0"
authors = ["CharlyCst <castes.ch@gmail.com>"]
edition = "2018"

[[bin]]
name = "tendermock"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost-types = "0.6.1"
prost = "0.6.1"
tonic = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
futures = "0.3.8"
ics23 = "0.6.0"
sha2 = "0.9.2"
hex = "0.4.2"

# ibc = { git = "https://github.com/informalsystems/ibc-rs" }
# ibc-proto = { git = "https://github.com/informalsystems/ibc-rs" }
ibc = { git = "https://github.com/CharlyCst/ibc-rs", branch="charly/tonic-server" }
ibc-proto = { git = "https://github.com/CharlyCst/ibc-rs", branch="charly/tonic-server" }

tendermint = "0.17.0-rc2"
tendermint-testgen = "0.17.0-rc2"
tendermint-rpc = "0.17.0-rc2"
tendermint-proto = "0.17.0-rc2"
tendermint-light-client = "0.17.0-rc2"

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = [ "suggestions", "derive", "std" ]
