[package]
name = "tendermock"
version = "0.1.0"
authors = ["CharlyCst <castes.ch@gmail.com>"]
edition = "2018"

[[bin]]
name = "tendermock"
path = "src/bin/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost-types = "0.7"
prost = "0.7"
# Servers (JsonRPC, gRPC, Websocket)
tonic = "0.4"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures = "0.3.8"
# CLI utilities
colored = "2"
chrono = "0.4"
# Other
ics23 = "0.6.0"
sha2 = "0.9.2"
hex = "0.4.2"

# The `ibc-rs` repo didn't activate tonic server definition (see https://github.com/informalsystems/ibc-rs/blob/03cb9cafec462b3c36ca1c4aa5ef93c278fee9f3/proto-compiler/src/cmd/compile.rs#L85)
# In the meanwhile we rely on a fork
#
# ibc = { git = "https://github.com/informalsystems/ibc-rs" }
# ibc-proto = { git = "https://github.com/informalsystems/ibc-rs" }
ibc = { git = "https://github.com/CharlyCst/ibc-rs", branch="charly/tonic-server-definitions" }
ibc-proto = { git = "https://github.com/CharlyCst/ibc-rs", branch="charly/tonic-server-definitions" }

tendermint = "0.18.0"
tendermint-testgen = "0.18.0"
tendermint-rpc = "0.18.0"
tendermint-proto = "0.18.0"
tendermint-light-client = "0.18.0"

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = [ "suggestions", "derive", "std" ]
